[tool.poetry]
name = "test-used-tl-ml"
version = "0.1.0"
description = ""
authors = ["oscar50 <oscar@whaleandjaguar.co>"]
readme = "README.md"
packages = [{include = "test_used_tl_ml"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.0.1"
torch = "1.13.0"
spacy = {extras = ["cuda-autodetect"], version = "^3.5.3"}
torchtext = "0.14.0"
torchdata = "0.5.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
xgboost = "^1.7.5"
streamlit = "^1.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

